--- a/SmartFabEx/Base.lproj/Main.storyboard
+++ b/SmartFabEx/Base.lproj/Main.storyboard
@@ -114,5 +114,157 @@
             </objects>
             <point key="canvasLocation" x="416.80000000000001" y="110.19490254872565"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="KSV-sd-wOO">
+            <objects>
+                <viewController id="PXt-VZ-jcO" customClass="ViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="8wH-z7-mYi">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mX7-Rz-mae">
+                                <rect key="frame" x="8" y="28" width="359" height="44"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="ZF0-y0-01n"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Esercizio 2: Navigation" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Oxb-DL-Y7j">
+                                <rect key="frame" x="18" y="38" width="174" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sPv-aZ-VOi">
+                                <rect key="frame" x="0.0" y="607" width="375" height="60"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IIk-GT-uDe">
+                                        <rect key="frame" x="162" y="15" width="51" height="30"/>
+                                        <state key="normal" title="Modale"/>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="IIk-GT-uDe" firstAttribute="centerX" secondItem="sPv-aZ-VOi" secondAttribute="centerX" id="Xdx-X3-vGJ"/>
+                                    <constraint firstItem="IIk-GT-uDe" firstAttribute="centerY" secondItem="sPv-aZ-VOi" secondAttribute="centerY" id="tKP-zD-du2"/>
+                                    <constraint firstAttribute="height" constant="60" id="vhA-ES-hpV"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nhy-Pr-xsF">
+                                <rect key="frame" x="8" y="80" width="359" height="519"/>
+                                <subviews>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="t7m-aN-c28">
+                                        <rect key="frame" x="0.0" y="0.0" width="359" height="519"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <string key="text">Inserire un NavigationController nella storyboard, assegnare come root view controller il view controller dell'esercizio precedente. Aggiungere una segue di tipo push al Button con label "Successivo" contenuto nel view controller dell'esercizio 1 in modo da navigare a questo view controller</string>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="t7m-aN-c28" firstAttribute="top" secondItem="nhy-Pr-xsF" secondAttribute="top" id="TUL-pf-OiM"/>
+                                    <constraint firstAttribute="trailing" secondItem="t7m-aN-c28" secondAttribute="trailing" id="jfh-uo-j1a"/>
+                                    <constraint firstAttribute="bottom" secondItem="t7m-aN-c28" secondAttribute="bottom" id="tld-zg-UPn"/>
+                                    <constraint firstItem="t7m-aN-c28" firstAttribute="leading" secondItem="nhy-Pr-xsF" secondAttribute="leading" id="xrd-vm-p5J"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="sPv-aZ-VOi" firstAttribute="trailing" secondItem="tjR-7K-Sj2" secondAttribute="trailing" id="0Ev-Hd-qKv"/>
+                            <constraint firstItem="nhy-Pr-xsF" firstAttribute="leading" secondItem="tjR-7K-Sj2" secondAttribute="leading" constant="8" id="3V6-dd-NVF"/>
+                            <constraint firstItem="tjR-7K-Sj2" firstAttribute="trailing" secondItem="nhy-Pr-xsF" secondAttribute="trailing" constant="8" id="5Gi-TX-Vpb"/>
+                            <constraint firstItem="mX7-Rz-mae" firstAttribute="leading" secondItem="tjR-7K-Sj2" secondAttribute="leading" constant="8" id="61M-Nm-bJx"/>
+                            <constraint firstItem="sPv-aZ-VOi" firstAttribute="leading" secondItem="tjR-7K-Sj2" secondAttribute="leading" id="6rE-AJ-CI2"/>
+                            <constraint firstItem="tjR-7K-Sj2" firstAttribute="trailing" secondItem="mX7-Rz-mae" secondAttribute="trailing" constant="8" id="CR2-vQ-cG2"/>
+                            <constraint firstItem="sPv-aZ-VOi" firstAttribute="bottom" secondItem="tjR-7K-Sj2" secondAttribute="bottom" id="TtO-9h-lc3"/>
+                            <constraint firstItem="mX7-Rz-mae" firstAttribute="top" secondItem="tjR-7K-Sj2" secondAttribute="top" constant="8" id="VWs-Tn-sYn"/>
+                            <constraint firstItem="nhy-Pr-xsF" firstAttribute="top" secondItem="mX7-Rz-mae" secondAttribute="bottom" constant="8" id="fDY-05-gor"/>
+                            <constraint firstItem="sPv-aZ-VOi" firstAttribute="top" secondItem="nhy-Pr-xsF" secondAttribute="bottom" constant="8" id="gEV-eS-Liz"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="tjR-7K-Sj2"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="uiM-kB-Zgk" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1196" y="110.19490254872565"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="N2M-vg-nF7">
+            <objects>
+                <viewController id="S71-3L-d8Z" customClass="ViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="mAa-lc-Vla">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Zt3-QS-g1v">
+                                <rect key="frame" x="8" y="28" width="359" height="44"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="q9d-jF-W0G"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Esercizio 3: Modal" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tlG-J5-l5y">
+                                <rect key="frame" x="18" y="38" width="140" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HM9-dO-EMq">
+                                <rect key="frame" x="0.0" y="607" width="375" height="60"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="a29-cs-ArV">
+                                        <rect key="frame" x="166" y="15" width="44" height="30"/>
+                                        <state key="normal" title="Chiudi"/>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="EQc-PC-50s"/>
+                                    <constraint firstItem="a29-cs-ArV" firstAttribute="centerY" secondItem="HM9-dO-EMq" secondAttribute="centerY" id="bq9-DF-TKz"/>
+                                    <constraint firstItem="a29-cs-ArV" firstAttribute="centerX" secondItem="HM9-dO-EMq" secondAttribute="centerX" id="oAZ-QL-5E2"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="h0l-qa-K2f">
+                                <rect key="frame" x="8" y="80" width="359" height="519"/>
+                                <subviews>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="SFq-Kk-opH">
+                                        <rect key="frame" x="0.0" y="0.0" width="359" height="519"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <string key="text">Aggiungere una segue al Button "Modale" contenuto nel view controller dell'esercizio 2 in modo che mostri questo view controller in maniera modale. Colegare una action al Button "Chiudi" di questo view controller in modo da chiudere il modale quando premuto.</string>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="SFq-Kk-opH" firstAttribute="leading" secondItem="h0l-qa-K2f" secondAttribute="leading" id="Vdr-98-Vxw"/>
+                                    <constraint firstItem="SFq-Kk-opH" firstAttribute="top" secondItem="h0l-qa-K2f" secondAttribute="top" id="dmL-Nj-F4V"/>
+                                    <constraint firstAttribute="bottom" secondItem="SFq-Kk-opH" secondAttribute="bottom" id="r3q-wl-GIq"/>
+                                    <constraint firstAttribute="trailing" secondItem="SFq-Kk-opH" secondAttribute="trailing" id="tTp-sZ-gby"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="99h-E4-Qut" firstAttribute="trailing" secondItem="h0l-qa-K2f" secondAttribute="trailing" constant="8" id="Iyj-Uy-QAf"/>
+                            <constraint firstItem="h0l-qa-K2f" firstAttribute="leading" secondItem="99h-E4-Qut" secondAttribute="leading" constant="8" id="RGf-Yb-e9y"/>
+                            <constraint firstItem="h0l-qa-K2f" firstAttribute="top" secondItem="Zt3-QS-g1v" secondAttribute="bottom" constant="8" id="Vs8-cs-LMB"/>
+                            <constraint firstItem="Zt3-QS-g1v" firstAttribute="top" secondItem="99h-E4-Qut" secondAttribute="top" constant="8" id="adX-cz-iZr"/>
+                            <constraint firstItem="HM9-dO-EMq" firstAttribute="bottom" secondItem="99h-E4-Qut" secondAttribute="bottom" id="d9Z-SH-0yU"/>
+                            <constraint firstItem="Zt3-QS-g1v" firstAttribute="leading" secondItem="99h-E4-Qut" secondAttribute="leading" constant="8" id="fJt-OP-qAT"/>
+                            <constraint firstItem="99h-E4-Qut" firstAttribute="trailing" secondItem="Zt3-QS-g1v" secondAttribute="trailing" constant="8" id="fPw-M0-ZxJ"/>
+                            <constraint firstItem="HM9-dO-EMq" firstAttribute="trailing" secondItem="99h-E4-Qut" secondAttribute="trailing" id="soI-fD-0qR"/>
+                            <constraint firstItem="HM9-dO-EMq" firstAttribute="leading" secondItem="99h-E4-Qut" secondAttribute="leading" id="ux7-43-wcP"/>
+                            <constraint firstItem="HM9-dO-EMq" firstAttribute="top" secondItem="h0l-qa-K2f" secondAttribute="bottom" constant="8" id="z83-HQ-X95"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="99h-E4-Qut"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YcV-Bf-JIj" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1943" y="110"/>
+        </scene>
     </scenes>
 </document>
